--- a/css/stye.css
+++ b/css/stye.css
@@ -21,6 +21,8 @@
     --fs-h3: 1.25rem;
     --fs-body: 1rem;
 
+    --bs: 0.25em 0.25em 0.75em rgba(0,0,0,.25),
+          0.125em 0.125em 0.25em rgba(0,0,0,.15); 
 }
 
 @media (min-width: 800px) {
@@ -96,6 +98,7 @@ h3{
 .section_subtitle_intro,
 .section_subtitle_about{
     background: var(--clr-accent);
+    padding: .25em 1em; 
     font-family: var(--ff-secondary);
     margin-bottom: 1em;
 }
@@ -107,9 +110,19 @@ h3{
     position: relative;
 }
 
+.intro_img{
+    box-shadow: var(--bs);
+}
+
+.section_subtitle_intro{
+    display: inline-block;
+}
+
 @media (min-width: 600px) {
     .intro{
         display: grid;
+        width: min-content;
+        margin: 0 auto; 
         grid-column-gap: 1em ;
         grid-template-areas: 
             "img title"
@@ -120,5 +133,53 @@ h3{
     .intro_img{
         grid-area: img;  
         min-width: 250px;
+        position: relative;
+        z-index: 2;
+    }
+    .section_subtitle_intro{
+        align-self: start;
+        grid-column: -1 / 1;  
+        grid-row: 2;
+        text-align: right;
+        position: relative;
+        left: -1.5em; 
+        width: calc(100% + 1.5em);
+
     }
 }
+
+/* Work section*/
+
+.my_work{
+    background-color: var(--clr-accent);
+    background-image: url(../img/test_wallpaper.jpg);
+    background-size: cover;
+    background-blend-mode: multiply;
+    color: var(--clr-light);
+text-align: center;
+}
+
+.section_title_my_work{
+    color: var(--clr-light);
+    position: relative;
+}
+
+.section_title_my_work::after{
+    content: '';
+    display: block;
+    width: 3em;
+    height: 1px;
+    margin: 0.5em auto 1em;
+    background: var(--clr-light);
+    opacity: 0.25;
+}
+
+@media (min-width: 800px){
+    .work{
+        display: flex;
+        max-width: 1000px;
+        margin: 0 auto;
+
+    }
+}
+
