--- a/portfolio/src/App.css
+++ b/portfolio/src/App.css
@@ -13,14 +13,15 @@
   }
 }
 
+
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
+  position: relative;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  height: 100vh;
   color: white;
 }
 
@@ -35,4 +36,16 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.person-image {
+  width: 200px; /* Adjust the width to your preference */
+  height: auto; /* Maintain aspect ratio */
+  border-radius: 50%; /* Make the image circular */
+  margin-bottom: 20px; /* Add some space between the image and text */
+  object-fit: cover;
+}
+
+.intro-text {
+  text-align: center; /* Center-align the text */
 }
